--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,3 +13,10 @@ services:
       MYSQL_ROOT_PASSWORD: password
     volumes:
       - ./schema/:/docker-entrypoint-initdb.d/
+  backend:
+    build: .
+    ports:
+      - "8000:8000"
+    restart: unless-stopped
+    depends_on:
+      - db
