--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "pinia": "^2.0.23",
+    "uuid": "^9.0.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
@@ -19,6 +21,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
     "vite": "^3.0.9"
   }
 }
