--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "pinia": "^2.0.23",
     "uuid": "^9.0.0",
     "vue": "^3.2.38",
