--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "qs": "^6.11.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.38",
+    "vue-native-websocket": "^2.0.15",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
